--- a/.env
+++ b/.env
@@ -2,6 +2,8 @@ PGUSER=postgres
 PGPASSWORD=postgres
 PGHOST=localhost
 PGPORT=5436
-PGDATABASE=wheather-app
+PGDATABASE=medods-test
 PGSSLMODE=disable
 HTTP_PORT=8082
+ACCESS_TOKEN_TTL=30m
+REFRESH_TOKEN_TTL=43200m #1 month
