--- a/.env
+++ b/.env
@@ -8,3 +8,6 @@ HTTP_PORT=8082
 ACCESS_TOKEN_TTL=30m
 REFRESH_TOKEN_TTL=43200m #1 month
 SIGNING_KEY=qazwsxedc
+STMP_HOST=smtp.gmail.com
+STMP_PORT=587
+STMP_FROM=noreply@example.com
