--- a/.env
+++ b/.env
@@ -5,9 +5,10 @@ PGPORT=5436
 PGDATABASE=medods-test
 PGSSLMODE=disable
 HTTP_PORT=8082
-ACCESS_TOKEN_TTL=30m
-REFRESH_TOKEN_TTL=43200m #1 month
+ACCESS_TOKEN_TTL=15m
+REFRESH_TOKEN_TTL=43200m # 1 month
 SIGNING_KEY=qazwsxedc
-STMP_HOST=smtp.gmail.com
-STMP_PORT=587
-STMP_FROM=noreply@example.com
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_FROM=noreply@example.com
+SMTP_PASS=password
